# swarmdon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  model.rs  routes.rs  state.rs  swarm.rs  utils.rs
static/: home.html
