[package]
name = "swarmdon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arbitrary = { version = "1.4.1", features = ["derive"] }
axum = { version = "0.6.18", features = ["headers"] }
bincode = "1.3.3"
clap = { version = "4.3.8", features = ["derive"] }
http = "0.2.9"
maplit = "1.0.2"
mastodon-async = { version = "1.2.2", features = ["json"] }
once_cell = "1.18.0"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
simple-cookie = "0.1.1"
sled = "0.34.7"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"

[dev-dependencies]
arbtest = "0.3.2"
